--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
   <modules>
     <module>service-config</module>
     <module>service-registry</module>
+    <module>gateway</module>
+    <module>admin</module>
+    <module>zipkin</module>
+    <module>fraud-verifier</module>
+    <module>user-service</module>
+    <module>card-service</module>
   </modules>
 
   <properties>
@@ -21,6 +27,8 @@
     <maven.compiler.target>11</maven.compiler.target>
     <spring-cloud.version>2020.0.1</spring-cloud.version>
     <spring-boot.version>2.4.3</spring-boot.version>
+    <spring-boot-admin.version>2.4.0</spring-boot-admin.version>
+    <openshift-maven-plugin.version>1.1.1</openshift-maven-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -40,9 +48,16 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+
+      <dependency>
+        <groupId>de.codecentric</groupId>
+        <artifactId>spring-boot-admin-starter-server</artifactId>
+        <version>${spring-boot-admin.version}</version>
+      </dependency>
     </dependencies>
+
   </dependencyManagement>
-  
+
   <build>
     <pluginManagement>
       <plugins>
@@ -50,6 +65,19 @@
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <version>${spring-boot.version}</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>repackage</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>org.eclipse.jkube</groupId>
+          <artifactId>openshift-maven-plugin</artifactId>
+          <version>${openshift-maven-plugin.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
