--- a/service-config/pom.xml
+++ b/service-config/pom.xml
@@ -40,6 +40,11 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.eclipse.jkube</groupId>
+				<artifactId>openshift-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 
