changed to github config repo

--- a/service-config/src/main/resources/application.yaml
+++ b/service-config/src/main/resources/application.yaml
@@ -33,7 +33,7 @@ spring:
     config:
       server:
         git:
-          uri: https://gitee.com/JonkeyGuan/spring-cloud-on-openshift
+          uri: https://github.com/JonkeyGuan/spring-cloud-on-openshift
           search-paths: service-config/src/main/resources/config-repo
           default-label: master
           skipSslValidation: true
