--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
         <artifactId>spring-boot-admin-starter-server</artifactId>
         <version>${spring-boot-admin.version}</version>
       </dependency>
+
+      <dependency>
+        <groupId>de.codecentric</groupId>
+        <artifactId>spring-boot-admin-starter-client</artifactId>
+        <version>${spring-boot-admin.version}</version>
+      </dependency>
     </dependencies>
 
   </dependencyManagement>
