--- a/service-config/src/main/resources/config-repo/service-registry.yaml
+++ b/service-config/src/main/resources/config-repo/service-registry.yaml
@@ -12,6 +12,7 @@ eureka:
     hostname: ${HOSTNAME:${spring.application.name}}
     lease-expiration-duration-in-seconds: 30
     lease-renewal-interval-in-seconds: 5
+    health-check-url-path: /actuator/health
   server:
     enable-self-preservation: true
     eviction-interval-timer-in-ms: 5000
